--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.4.0
   http: ^0.13.4
+  google_sign_in: ^5.2.4
+  firebase_auth: ^3.3.11
+  firebase_core: ^1.13.1
+  provider: ^6.0.2
+  cached_network_image: ^3.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
