--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^1.13.1
   provider: ^6.0.2
   cached_network_image: ^3.2.0
+  cloud_firestore: ^3.1.14
 
 
   # The following adds the Cupertino Icons font to your application.
