--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.0.2
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.14
+  shared_preferences: ^2.0.13
+  firebase_database: ^9.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
